--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
       <div class="paragraph">
         <b>Формат проведения - видео и аудио записи (теория и медитации)</b>
       </div>
+      
+      <hr />
+      
+      <a href="https://docs.google.com/forms/d/1Wwy7EW_Jpummu3o65giKoI-XImoIU7GFvTr4z7BaFak/edit" class="button"
+      target="_blank" rel="noopener">Заказать курс</a>
     </div>
   </body>
 </html>
